Fixed routes and API doc
